# ros-study

./: README.md
chapt1/: CMakeCache.txt  Makefile  cmake_install.cmake  hello.cpp  learn  md1.md
chapt1/install/: local_setup.sh  setup.sh
chapt1/log/: latest_build
chapt2/: 2_ros_node.cpp  CMakeLists.txt
chapt2/install/: local_setup.sh  setup.sh
chapt2/log/: latest_build
chapt2/ws_ros/install/: local_setup.sh  setup.sh
chapt2/ws_ros/install/pkg01_helloworld_cpp/lib/pkg01_helloworld_cpp/: helloworld  learn_cpp  learn_functional  learn_lambda  learn_shared  learn_thread1  person_node
chapt2/ws_ros/install/pkg01_helloworld_cpp/share/pkg01_helloworld_cpp/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
chapt2/ws_ros/install/pkg02_helloworld_py/lib/pkg02_helloworld_py/: python_node
chapt2/ws_ros/install/pkg02_helloworld_py/share/pkg02_helloworld_py/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
chapt2/ws_ros/log/: latest_build
chapt2/ws_ros/src/pkg01_helloworld_cpp/: CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  helloworld
chapt2/ws_ros/src/pkg01_helloworld_cpp/ament_cmake_environment_hooks/: local_setup.dsv  local_setup.sh
chapt2/ws_ros/src/pkg01_helloworld_cpp/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
chapt2/ws_ros/src/pkg01_helloworld_cpp/src/: helloworld.cpp  learn_cpp.cpp  learn_functional.cpp  learn_lambda.cpp  learn_shared.cpp  learn_thread.cpp  learn_thread1.cpp  person_node.cpp
chapt2/ws_ros/src/pkg02_helloworld_py/: setup.py
chapt3/status_interfaces/: CMakeLists.txt  package.xml
chapt3/ws_msg/install/: local_setup.sh  setup.bash  setup.sh
chapt3/ws_msg/install/status_interfaces/share/status_interfaces/: package.zsh
chapt3/ws_msg/log/: latest_build
chapt3/ws_msg/src/install/: local_setup.sh  setup.sh
chapt3/ws_msg/src/log/: latest_build
chapt3/ws_msg/src/status_interfaces/: CMakeLists.txt  package.xml
chapt3/ws_msg/src/status_interfaces/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
chapt3/ws_msg/src/status_interfaces/log/: latest_build
chapt3/ws_msg/src/status_interfaces/msg/: SystemStatus.msg
chapt3/ws_topic/install/: local_setup.sh  setup.sh
chapt3/ws_topic/install/demo_cpp_topic/lib/demo_cpp_topic/: learn_timer  turtle_circle  turtle_control  turtle_description
chapt3/ws_topic/install/demo_cpp_topic/share/demo_cpp_topic/: local_setup.sh  package.sh  package.xml
chapt3/ws_topic/log/: latest_build
chapt3/ws_topic/src/demo_cpp_topic/: CMakeLists.txt
chapt3/ws_topic/src/demo_cpp_topic/src/: learn_timercallback.cpp  turtle_circle.cpp  turtle_control.cpp  turtle_description.cpp
chapt4/: frames_2026-01-03_17.46.49.gv
chapt4/install/: local_setup.sh  setup.sh
chapt4/install/chapt4_interfaces/share/chapt4_interfaces/: package.sh
chapt4/install/chapt4_interfaces/share/chapt4_interfaces/cmake/: rosidl_cmake-extras.cmake
chapt4/install/chapt4_interfaces/share/chapt4_interfaces/srv/: FaceDetector.idl  FaceDetector_Response.msg  Patrol.idl  Patrol_Request.msg
chapt4/install/demo_cpp_service/lib/demo_cpp_service/: patrol_client  turtle_control
chapt4/install/demo_cpp_service/share/demo_cpp_service/: local_setup.sh  package.sh
chapt4/install/turtle_param/lib/turtle_param/: dynamic_param_node
chapt4/install/turtle_param/share/turtle_param/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
chapt4/log/: latest_build
chapt4/src/chapt4_interfaces/: CMakeLists.txt
chapt4/src/chapt4_interfaces/srv/: FaceDetector.srv
chapt4/src/demo_cpp_service/: CMakeLists.txt
chapt4/src/demo_cpp_service/src/: Patrol_Client.cpp  TurtleController.cpp
chapt4/src/turtle_param/: CMakeLists.txt
chapt4/src/turtle_param/src/: dynamic_param_node.cpp
chapt5/chapt5_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
chapt5/chapt5_ws/log/: latest_build
chapt5/chapt5_ws/src/demo_cpp_tf/: CMakeLists.txt
chapt5/chapt5_ws/src/demo_cpp_tf/src/: dynamic_tf_broadcaster.cpp  static_tf_broadcaster.cpp  tf_listener.cpp
chapt6/install/: local_setup.sh  setup.sh
chapt6/install/fishbot_description/share/fishbot_description/: local_setup.sh  package.sh
chapt6/log/: latest_build
chapt6/src/fishbot_description/: CMakeLists.txt
chapt6/src/fishbot_description/launch/: display_robot.launch.py  gazebo_sim.launch.py
chapt6/src/fishbot_description/urdf/: first_robot.gv  first_robot.urdf
chapt6/src/fishbot_description/world/: custom_room.world
log/: latest_build
ros-md/: Chapt1.md  chapt2.md  chapt3.md  chapt4.md  chapt5.md  chapt6.md  ctrl+shift+``.md
status_publisher/: setup.py
status_publisher/install/: local_setup.sh  setup.sh
status_publisher/install/status_publisher/share/status_publisher/: package.sh  package.xml
status_publisher/log/: latest_build
topic_practice_ws/install/: local_setup.sh  setup.sh
topic_practice_ws/install/status_interfaces/share/status_interfaces/: package.bash
topic_practice_ws/log/: latest_build
topic_practice_ws/src/status_interfaces/: CMakeLists.txt  package.xml
(+49 files in other folders)
