<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>status_interfaces</name>
  <version>0.0.0</version>
  <description>System status interface definitions</description>

  <maintainer email="2575295717@qq.com">yzh</maintainer>
  <license>Apache-2.0</license>

  <!-- 关键：接口包声明 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- 关键：生成器必须是 buildtool_depend -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- msg 里用到的类型 -->
  <depend>builtin_interfaces</depend>

  <!-- 关键：运行期依赖 -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
